# fractal-explorer

./: .gitignore  CMakeLists.txt  README.md
scripts/: default.lua
src/: JuliaSet.cpp  JuliaSet.h  MandelbrotSet.cpp  MandelbrotSet.h  Set.cpp  Set.h  main.cpp
